# ws_server

./: .gitignore  CMakeLists.txt  Vis.html  main.cpp
include/: Acceptor.h  Active.h  BufferConfig.h  BufferFactory.h  CircularBuffer.h  Config.h  IBuffer.h  IBufferConfig.h  IBufferFactory.h  IBufferView.h  IConfig.h  IPipeline.h  IPipelineDependencies.h  IPipelineFactory.h  IStage.h  IStageFactory.h  ITCPServerDependencies.h  IWork.h  NoAuth.h  Pipeline.h  PipelineDependencies.h  PipelineFactory.h  ServerBuilder.h  Session.h  SessionExecutor.h  Stage.h  StageFactory.h  TCPAcceptor.h  TCPServer.h  TCPServerBuilder.h  TCPServerDependencies.h  Types.h  VisDataProvider.h  WSEchoSession.h  WSEchoSessionEx.h  WSServer.h  WSSessionExecutor.h  WSVisSession.h  WSVisSessionEx.h
include/async/: Active.h  IBufferFactory.h  IPipeline.h  IPipelineFactory.h  IStageFactory.h  Stage.h  WidebandDetector.h
include/server/: Acceptor.h  CircularBuffer.h  CircularBuffer1.h  IConfig.h  Pipeline.h  Pipeline1.h  Session.h  Types.h
include/tests/: MockBuffer.h  MockBufferFactory.h  MockBufferView.h  MockConfig.h  MockPipeline.h  MockPipelineDependencies.h  MockPipelineFactory.h  MockStage.h  MockStageFactory.h  MockWork.h
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  PipelineTests.cpp  ServerPipelineTests.cpp  WSServerTests.cpp  json_playground.cpp
